--- a/package.json
+++ b/package.json
@@ -8,8 +8,7 @@
     "lib": "babel src/lib -d lib --copy-files",
     "lib:watch": "babel src/lib -w -d lib --copy-files",
     "docs": "webpack-dev-server --mode development",
-    "docs:prod": "webpack --mode production",
-    "prepare": "npm run build"
+    "docs:prod": "webpack --mode production"
   },
   "keywords": [
     "react",
@@ -48,7 +47,7 @@
   "homepage": "https://github.com/mypwhas9letters/simple-react-google-maps#readme",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/fullstackjohnmack/simple-react-google-maps.git"
+    "url": "git+https://github.com/mypwhas9letters/simple-react-google-maps.git"
   },
   "dependencies": {
     "prop-types": "^15.6.1",
