--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "lib": "babel src/lib -d lib --copy-files",
     "lib:watch": "babel src/lib -w -d lib --copy-files",
     "docs": "webpack-dev-server --mode development",
-    "docs:prod": "webpack --mode production"
+    "docs:prod": "webpack --mode production",
+    "postinstall": "cd node_modules/[PACKAGE_NAME] && npm install && npm run build"
   },
   "keywords": [
     "react",
