--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "lib:watch": "babel src/lib -w -d lib --copy-files",
     "docs": "webpack-dev-server --mode development",
     "docs:prod": "webpack --mode production",
-    "postinstall": "cd node_modules/[PACKAGE_NAME] && npm install && npm run build"
+    "postinstall": "cd node_modules/simple-react-google-maps && npm install && npm run build"
   },
   "keywords": [
     "react",
